src/objects/ATARC_Process_Availability_Rule__mdt.object
<CustomObject>
    <fields>
        <fullName>ATARC_Process_Setting__c</fullName>
        <label>ATARC Process Setting</label>
        <referenceTo>ATARC_Process_Setting__mdt</referenceTo>
        <relationshipLabel>ATARC Process Availability Rules</relationshipLabel>
        <relationshipName>ATARC_Process_Availability_Rules</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Availability__c</fullName>
        <label>Availability</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                    <default>true</default>
                    <label>Available</label>
                </value>
                <value>
                    <fullName>Unavailable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Scope_Filter_Value__c</fullName>
        <label>Custom Scope Filter Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Custom_Scope_Filter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Scope Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scope_Id_Value__c</fullName>
        <label>Scope Id Value</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <label>Scope</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Permission Set</fullName>
                </value>
                <value>
                    <fullName>Profile</fullName>
                    <default>true</default>
                    <label>Profile</label>
                </value>
                <value>
                    <fullName>Queue</fullName>
                </value>
                <value>
                    <fullName>Role</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ATARC Process Availability Rule</label>
    <pluralLabel>ATARC Process Availability Rules</pluralLabel>
    <validationRules>
        <fullName>Custom_Scope_Filter_Value</fullName>
        <active>true</active>
        <errorConditionFormula>Custom_Scope_Filter__c	== true &amp;&amp; (isnull( Custom_Scope_Filter_Value__c) || LEN(Custom_Scope_Filter_Value__c) &lt;= 0)</errorConditionFormula>
        <errorDisplayField>Custom_Scope_Filter_Value__c</errorDisplayField>
        <errorMessage>Custom Scope Filter value must not be empty if Custom Scope Filter is selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ScopeIdValue</fullName>
        <active>true</active>
        <errorConditionFormula>Custom_Scope_Filter__c != true &amp;&amp; (isnull(Scope_Id_Value__c) || LEN(Scope_Id_Value__c) &lt;= 0)</errorConditionFormula>
        <errorDisplayField>Scope_Id_Value__c</errorDisplayField>
        <errorMessage>Scope Id Value must not be empty if Custom Scope Filter is not selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>UserOnlySupportedCustomFilter</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(Scope__c) != &apos;User&apos; &amp;&amp; Custom_Scope_Filter__c == true</errorConditionFormula>
        <errorDisplayField>Custom_Scope_Filter__c</errorDisplayField>
        <errorMessage>Only Scope of User supports Custom Scope Filters.</errorMessage>
    </validationRules>
</CustomObject>